# stm32mp1-baremetal

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  copy_to_sdcard.sh  copy_to_sdd4.sh  create_sd.sh  format-sdcard.sh  partition-sdcard.sh  setupenv.sh  test.sh  toolchain-arm-none-eabi.cmake
.github/workflows/: c-cpp.yml
CoreModules/: djembeCore.h  iirneon.hh
Drivers/STM32MP1xx_HAL_Driver/: Release_Notes.html
Drivers/mdrivlib/: README.md  interrupt.cc  interrupt.hh  irq_ctrl.c  mmu_ca7.c  system.hh
Drivers/system/: system_ca7.c
_attic/: rcc.hh
audio_proc/: notes.md
basic_irq/: Makefile  README.md  delay.hh  interrupt.cc  main.cc  startup.s  uart.hh
better_hang/: build.sh  linkscript.ld  startup.s
blinky/: build.sh  linkscript.ld  startup2.s
board/sunxi/: board.c
bootloaders/dfu_ssbl/: Makefile  board_conf.hh  linkscript.ld  main.cc  startup.s  usbd_conf.h  usbd_dfu_media.cc
bootloaders/mp1-boot/: Makefile  README.md  boot_loader.hh  boot_media_loader.hh  boot_nor.hh  boot_sd.hh  fsbl_header.py  linkscript.ld  main.cc  pmic.hh  print_messages.hh  startup.s  stm32mp1xx_hal_conf.h  systeminit.c  systeminit.h
cmake/: arm-none-eabi-gcc.cmake  common.cmake  gcc-compile-options-cxx.txt
cmd/: Kconfig
common/: board_f.c  image-android-dt.c
config/mipi_dsi_lcd/: stm32mp1xx_hal_dsi.h  stm32mp1xx_hal_ltdc.c  stm32mp1xx_hal_ltdc.h  stm32mp1xx_hal_ltdc_ex.c
configs/: mt8518_ap1_emmc_defconfig  odroid-xu3_defconfig  sandbox64_defconfig  stm32mp15_dhcom_basic_defconfig  stm32mp15_disco_baremetal_defconfig  stm32mp15_trusted_defconfig
copro/: Makefile  README.md  linkscript_ca7.ld  linkscript_cm4.ld  main_cm4.cc  makefile_common.mk  makefile_mp1a7.mk  makefile_mp1m4.mk  mmMakefile  startup_ca7.s  startup_cm4.s
copro_embedded/: README.md  leds.hh  linkscript_cm4.ld  main_ca7.cc
copro_rproc/: main_ca7.cc  makefile_mp1m4.mk  startup_ca7.s
ctest/: .clang-format  .clangd  Makefile  README.md  app.c  linkscript.ld  startup.s  startup_stm32mp157caax.s  stm32mp15xx_m4.ld
doc/android/: fastboot.txt
docs/: Setup.md
drivers/: CMakeLists.txt  adc_builtin_driver.cc  adc_builtin_driver.hh  adc_spi_max11666.hh  arch.hh  bdma_config_struct.hh  cache.hh  clocks.hh  codec.hh  codec_CS42L51.cc  codec_CS42L51.hh  codec_CS42L51_registers.h  codec_PCM3168.hh  codec_WM8731.hh  codec_WM8731_registers.h  cs42l51.c  dac_MCP48FVBxx.hh  dac_stream.hh  debounced_switch.hh  dma_config_struct.hh  frame_buffer_led.hh  hal_handlers.cc  i2c.cc  i2c.hh  i2c_conf.hh  i2c_config_struct.hh  i2c_simple.hh  i2c_target.hh  interrupt_control.hh  irq_ctrl.c  irq_handler.cc  led_driver.hh  leds.hh  memory_transfer.hh  pca9685_led_driver.hh  pin.cc  pin.hh  pinchange.hh  pinconf.hh  qspi_flash_driver.hh  (+22 more)
drivers/clk/: Makefile  clk_scmi.c  clk_stm32mp1.c
drivers/core/: of_access.c  ofnode.c
drivers/fastboot/: fb_command.c  fb_mmc.c
drivers/gpio/: mpc8xxx_gpio.c  sandbox.c
drivers/mailbox/: Makefile  arm-smc-mbox.c
drivers/misc/: Kconfig  Makefile  scmi_agent.c
drivers/mmc/: stm32_sdmmc2.c
drivers/phy/: phy-stm32-usbphyc.c
drivers/ram/stm32mp1/: stm32mp1_tests.c
drivers/remoteproc/: stm32_copro.c
drivers/reset/: Kconfig
drivers/usb/dwc3/: core.c
drivers/usb/host/: dwc2.c  ohci-generic.c
drivers/usb/musb-new/: sunxi.c
drivers/video/: raydium-rm68200.c
examples/: Makefile  README.md
examples/audio_processor/: .clangd  Makefile  README.md  audio.hh  audio_codec_conf.hh  audio_stream.hh  audio_stream_conf.hh  daisy_harm_osc.hh  daisy_reverb_osc.hh  djembe_dual.hh  djembe_example.hh  dual_fm_osc.hh  interrupt.cc  linkscript.ld  main.cc  mmu_ca7.c  pmic.hh  rcc_conf.hh  stm32disco_buttons_conf.hh  stm32mp1xx_hal_conf.h  synth_list.hh  uart.hh
examples/basic_irq/: Makefile  README.md  interrupt.cc  main.cc  startup.s
examples/copro_embedded/: Makefile  delay.hh  main_ca7.cc  main_cm4.cc  makefile_common.mk  makefile_mp1a7.mk  makefile_mp1m4.mk
examples/copro_rproc/: Makefile  README.md  linkscript_cm4.ld  main_ca7.cc  main_cm4.cc  makefile_mp1m4.mk  startup_ca7.s  stm32xx.h  system_cm4.c  uart.hh
examples/ctest/: .clangd  CMakeLists.txt  Makefile  README.md  build.sh  main.c  startup.s
examples/dynload/: Makefile  common.cc  common.hh  main.cc  pluginA.cc  plugin_loader.hh  stm32mp1xx_hal_conf.h
examples/dynload/pluginC/: CMakeLists.txt
examples/hal_lib/: Makefile  README.md  linkscript.ld  main.c  main.h  makefile-common.mk  (+3 more)
examples/qemutest/: CMakeLists.txt  build.sh  linkscript.ld  main.cpp  run.sh  ryml_all.hpp  startup.s  toolchain-arm-none-eabi.cmake
hang/: startup.s
include/: dfu.h  env_internal.h  fastboot.h  i2c.h
minimal_boot/: LICENSE  Makefile  README.md  startup.s
multicore/: README.md  linkscript.ld  main.cc  secondary_core.hh  startup.s
nested_irq/: Makefile  README.md  leds.hh  linkscript.ld  main.cc  nested_isr.hh  startup.s  uart.hh
scripts/: build-u-boot.sh  build.sh  copy-app-to-sdcard.sh  copy-bootloader.sh  format-sdcard.sh  partition-sdcard-and-copy-bootloader.sh  partition-sdcard.sh  uimg_header.py
shared/: .clangd  brainboard_p3_conf.hh  callable.hh  makefile-common.mk  osd32brk_conf.hh  print.hh  stm32disco_conf.hh
stm32hal_patched/: stm32mp1xx_hal_pcd_ex.h
system/: libcpp_stub.cc  mmu_ca7.h
tests/: sdram_tests.cpp  test_frame_buffer_led.cpp
u-boot-stm32mp-2020.01-r0/: 0001-ARM-v2020.01-stm32mp-r1-MACHINE.patch  0002-ARM-v2020.01-stm32mp-r1-BOARD.patch  0003-ARM-v2020.01-stm32mp-r1-MISC-DRIVERS.patch  0004-ARM-v2020.01-stm32mp-r1-DEVICETREE.patch  0005-ARM-v2020.01-stm32mp-r1-CONFIG.patch  0006-osd32mpp1-BRK-board-added.patch  0007-Add-OSD32MP1-BRK-features-and-fix-formatting.patch  0008-Fix-missing-DDR-include-file.patch  0009-Fix-Cube-programmer-GPIO-default-level.patch  0099-Add-external-var-to-allow-build-of-new-devicetree-fi.patch  Makefile.sdk  README.HOW_TO.txt  series
util/: audio_frame.hh  circular_buffer.hh  countzip.hh  interp_array.hh  iterator_helpers.hh  math.hh  math_tables.cc  oscs.hh  parameter.h  string_util.hh
(+2502 files in other folders)
