add_library(codec-CS43L51 codec_CS42L51.cc)

# add_library(cycle-counter cycle_counter.cc)

# add_library(hal-handlers hal_handlers.cc)

# add_library(i2c i2c.cc)

# add_library(interrupt-handler interrupt_handler.cc)

# add_library(irq-ctrl irq_ctrl.c)

# add_library(irq-handler irq_handler.cc)

# add_library(pin pin.cc)

# add_library(sai-tdm sai_tdm.cc)
